[package]
name = "lin"
version = "0.1.0"
edition = "2021"
description = "A command-line interface for Linear"
license = "MIT"

[dependencies]
# CLI argument parsing
clap = { version = "4", features = ["derive", "env"] }

# HTTP client
reqwest = { version = "0.12", features = ["blocking", "json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Terminal UI
ratatui = "0.29"
crossterm = "0.28"

# Error handling
thiserror = "1"

# XDG directories
dirs = "5"

# Terminal colors
colored = "2"

# TTY detection
atty = "0.2"
