[package]
name = "lin"
version = "2.0.1"
edition = "2024"
description = "A command-line interface for Linear"
license = "MIT"
repository = "https://github.com/boyeln/lin"
homepage = "https://github.com/boyeln/lin"
readme = "README.md"
keywords = ["linear", "cli", "issue-tracker", "productivity"]
categories = ["command-line-utilities", "development-tools"]
authors = ["Boye Lillejord-Nygård"]
rust-version = "1.85"

[dependencies]
# CLI argument parsing
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Terminal UI
ratatui = "0.29"
crossterm = "0.28"

# Error handling
thiserror = "1"

# XDG directories
dirs = "5"

# Terminal colors
colored = "2"

# TTY detection
atty = "0.2"

# Temporary directories (for self-update)
tempfile = "3"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
# HTTP mocking for tests
mockito = "1"
serial_test = "3.3.1"
# Temporary directories (for tests and self-update)
tempfile = "3"
